[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>fb-restlet</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
 
   <dependencies>
 
@@ -45,8 +45,4 @@
     </dependency>
 
   </dependencies>
-
-  <scm>
-    <tag>v1.0.1</tag>
-  </scm>
 </project>
