--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.fizzbuzz</groupId>
@@ -16,12 +19,10 @@
 
     <!-- set the slf4j scope to "provided", because there are different versions for different environments (e.g. "regular" vs. android), and the containing 
       app will need to provide the right one. Likewise, set it to "optional" - the containing app will provide an explicit dependency on the right one -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <optional>true</optional>
-      <scope>provided</scope>
-    </dependency>
+    <!-- note: commenting this out for now, since current code doesn't contain logging. But future code might, and I don't want to forget how to configure 
+      this correctly -->
+    <!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-api</artifactId> <version>${slf4j-api.version}</version> <optional>true</optional> 
+      <scope>provided</scope> </dependency> -->
 
     <!-- set the restlet scope to "provided", because there are different versions for different environments (e.g. jse vs. gae vs. android), and the containing 
       app will need to provide the right one. Likewise, set it to "optional" - the containing app will provide an explicit dependency on the right one -->
@@ -36,12 +37,13 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
     </dependency>
 
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>fb-model</artifactId>
-      <version>1.0.1</version>
+      <version>1.0.2-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
