--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>fb-restlet</artifactId>
-  <version>1.0.2</version>
+  <version>1.0.3-SNAPSHOT</version>
 
   <dependencies>
 
@@ -44,8 +44,4 @@
     </dependency>
 
   </dependencies>
-
-  <scm>
-    <tag>v1.0.2</tag>
-  </scm>
 </project>
