--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>fb-restlet</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
 
   <dependencies>
 
@@ -44,4 +44,8 @@
     </dependency>
 
   </dependencies>
+
+  <scm>
+    <tag>v1.0.3</tag>
+  </scm>
 </project>
